--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'javax.mail:javax.mail-api:1.6.2'
-    implementation group: 'javax.mail', name: 'mail', version: '1.6.2'
+//    implementation 'com.sun.mail:jakarta.mail:1.6.3'
+
+    implementation 'com.sun.mail:android-mail:1.5.6'
+    implementation 'com.sun.mail:android-activation:1.5.6'
+
+//    implementation 'javax.mail:javax.mail-api:1.6.2'
+//    implementation group: 'javax.mail', name: 'mail', version: '1.6.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
