--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 //    implementation 'com.sun.mail:jakarta.mail:1.6.3'
 
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
     implementation 'com.sun.mail:android-mail:1.5.6'
     implementation 'com.sun.mail:android-activation:1.5.6'
 
